# tauri-sveltekit

./: $GITHUB_OUTPUT  .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  bun.lockb  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  vite.config.ts
.changeset/: clever-trains-kick.md  config.json  eight-penguins-wink.md  famous-berries-study.md  pre.json  shy-dragons-tell.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup/: action.yml
.github/scripts/: latest.js  latest.mjs  release.js  release.mjs
.github/setup/: action.yml
.github/workflows/: build.yml  create.yml  delete.yml  publish.yml  release.yml  test.yml  version.yml
src-tauri/: Cargo.toml  build.gradle.kts  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src.bun/: package.json
src/lib/: utils.ts
src/routes/: +layout.svelte  +page.svelte  @page.spec.ts  header.svelte  update.svelte
src/routes/about/: +page.ts  @page.spec.ts
