[package]
name = "vndbracket"
version = "0.0.0"
description = "A Tauri App"
authors = ["Alexandre Villeneuve"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vndbracket"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [ "codegen"] }

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [
  "image-ico",
  "image-png",
  "tray-icon"] }
tauri-plugin-process = { version = "2.0.0-beta", features = [] }
tauri-plugin-os = { version = "2.0.0-beta", features = [] }
tauri-plugin-log = { version = "2.0.0-beta", features = [] }
tauri-plugin-fs = { version = "2.0.0-beta", features = ["watch"] }
tauri-plugin-store = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = { version = "2.0.0-beta", features = [] }
tauri-plugin-notification = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = { version = "2.0.0-beta", features = [] }

# Desktop
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
tauri-plugin-updater = { version = "2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-cli = { version = "2.0.0-beta", features = [] }
tauri-plugin-global-shortcut = { version = "2.0.0-beta", features = [] }

# Mobile
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-barcode-scanner = { version = "2.0.0-beta", features = [] }
tauri-plugin-nfc = { version = "2.0.0-beta", features = [] }
tauri-plugin-biometric = { version = "2.0.0-beta", features = [] }
